@@ -30,6 +30,7 @@ https://github.com/elastic/apm-agent-go/compare/v1.14.0...master[View commits]
 - module/apmprometheus: add support for mapping prometheus histograms. {pull}1145[#(1145)]
 - Fixed a bug where errors in cloud metadata discovery could lead to the process aborting during initialisation {pull}1158[#(1158)]
 - Fixed a data race related to HTTP request header sanitisation {pull}1159[#(1159)]
+- `apm.CaptureError`, `apm.Error.SetTransaction`, and `apm.Error.SetSpan` will now set the associated transaction or span's default outcome to "failure" {pull}1160[#(1160)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
